Image out of box on Safari issue fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -135,6 +135,7 @@ $footer-height: 6vh;
     }
 
     .job-title {
+      margin-top: 40px;
       letter-spacing: 3px;
       font-weight: 300;
     }
@@ -447,10 +448,10 @@ $footer-height: 6vh;
     margin-top: 80px;
 
     .proj-description {
-      display: inline-block;
       width: 55%;
       position: relative;
       height: 100%;
+      display: inline-block;
 
       .description-header {
         background: blue;
@@ -458,6 +459,7 @@ $footer-height: 6vh;
         height: 50px;
         position: absolute;
         margin-top: 50px;
+
         h4 {
           margin-left: 35px;
           font-weight: bold;
@@ -481,6 +483,15 @@ $footer-height: 6vh;
       height: 100%;
       display: inline-block;
       overflow: hidden;
+
+      // This media query is applied only to Safari browser. Added to fix an issue on Safari.
+      @media not all and (min-resolution: 0.001dpcm) {
+        @supports (-webkit-appearance: none) {
+          position: absolute;
+          height: 400px;
+          width: 315px;
+        }
+      }
     }
   }
 }
